feat: change date fields from LocalDateTime to OffsetDateTime for better timezone handling